--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch"
   },
   "devDependencies": {
+    "@fingerprintjs/fingerprintjs-pro": "^3.6.1",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "svelte": "^3.44.0",
